# python-tutorial

./: README.md  pyproject.toml
exercises/: __init__.py  basic_exercises.py  chapter03_python_overview.py  chapter04_control_flow.py  chapter05_data_structures.py  chapter06_modules.py  chapter07_input_output.py  chapter08_errors_exceptions.py  chapter09_classes.py  chapter10_standard_library.py  chapter11_standard_library2.py  chapter12_async_programming.py  chapter13_type_hints.py  chapter14_dataclasses.py  chapter15_advanced_decorators.py  chapter16_threading_multiprocessing.py  chapter17_pytest_testing.py
notebooks/: chapter03_python_overview.ipynb  chapter04_control_flow.ipynb  chapter05_data_structures.ipynb  chapter06_modules.ipynb  chapter07_input_output.ipynb  chapter08_errors_exceptions.ipynb  chapter09_classes.ipynb  chapter10_standard_library.ipynb  chapter11_standard_library2.ipynb  chapter12_async_programming.ipynb  chapter13_type_hints.ipynb  chapter14_dataclasses.ipynb  chapter15_advanced_decorators.ipynb  chapter16_threading_multiprocessing.ipynb  chapter17_pytest_testing.ipynb
tests/: __init__.py  test_basic_exercises.py  test_chapter03_python_overview.py  test_chapter04_control_flow.py  test_chapter06_modules.py  test_chapter07_input_output.py  test_chapter08_errors_exceptions.py  test_chapter10_standard_library.py  test_chapter11_standard_library2.py  test_chapter13_type_hints.py  test_chapter14_dataclasses.py  test_chapter15_advanced_decorators.py  test_chapter16_threading_multiprocessing.py  test_chapter17_pytest_testing.py
(+8 files in other folders)
