[project]
name = "python-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.3.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "notebook>=7.4.3",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "pytest>=8.4.1",
    "requests>=2.32.4",
    "orjson>=3.10.3",
    "ujson>=5.10.0",
    "python-rapidjson>=1.21",
    "simplejson>=3.20",
    "aiohttp>=3.12.14",
    "aiofiles>=24.1.0",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
